trying to fix image export cropped issue

--- a/src/assets/vue-pivottable.css
+++ b/src/assets/vue-pivottable.css
@@ -89,11 +89,21 @@
   border: 1px solid #a2b1c6;
 }
 
+.pvtUi td.pvtOutput {
+  padding: 6px;
+  vertical-align: top;
+  border: 1px solid #a2b1c6;
+  width: 100%;
+  height: 100%;
+}
+
 table.pvtTable {
   font-size: 8pt;
   text-align: left;
   border-collapse: collapse;
   font-family: Verdana;
+  width: auto;
+  height: auto;
 }
 
 table.pvtTable thead tr th,
